--- a/PDF_Image/nbproject/project.properties
+++ b/PDF_Image/nbproject/project.properties
@@ -40,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fontbox-3.0.3.jar}:\
-    ${file.reference.pdfbox-app-3.0.3.jar}
+    ${file.reference.pdfbox-app-3.0.3.jar}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
